--- a/src/App.css
+++ b/src/App.css
@@ -48,20 +48,20 @@
 
 .registration-screen {
   display: flex;
-  justify-content: space-around;
+  flex-direction: column; 
   align-items: center;
-  padding: 100px;
+  padding: 80px;
 }
 
 .card-container {
-  width: 450px; 
+  width: 100%;
+  margin-bottom: 80px; 
 }
 
 .card {
   border: 2px solid #95D5B2; 
   border-radius: 10px; 
   padding: 30px;
-  margin: 10px;
   text-align: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
 }
@@ -84,7 +84,7 @@ input {
   margin-top: 15px;
 }
 
-button {
+.button-one {
   padding: 12px 20px; 
   border: none;
   border-radius: 5px; 
@@ -93,7 +93,7 @@ button {
   color: #fff; 
 }
 
-button:hover {
+.button-one:hover {
   background-color: #95D5B2; 
 }
 
@@ -127,7 +127,300 @@ button:hover {
   padding: 30px;
   text-align: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-  width: 400px;
+  width: 90%;
   margin: auto;
   margin-top: 100px;
 }
+
+
+.card-name{
+  font-family: 'Montserrat';
+  font-size: 22px;
+  margin-bottom: 15px;
+  color: #3498db;
+}
+
+@media (min-width: 768px) {
+  .registration-screen {
+    flex-direction: row; 
+    justify-content: space-around;
+    gap: 50px;
+    padding: 80;
+  }
+
+  .card-container {
+    width: 450px;
+    margin-top: 30px; 
+    
+  }
+
+  .card {
+    width: 95%;
+    margin: 0;
+  }
+
+  .button-group {
+    flex-direction: column;
+  }
+
+  .signup-card{
+    width: 35%;
+  }
+
+}
+
+/* ********************************** */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
+/*.header {
+    background-color: #fff;
+    color: #000;
+    display: inline-flex;
+    margin: 5px;
+    padding: 3px;
+  }
+*/
+.sideimage{
+
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  position: relative;
+  margin-top: 3px;
+ /* margin-left: 660px;*/
+}
+
+.sitename{
+    display: flex;
+    flex-direction: column;
+    /*justify-content: flex-start;
+    align-items: center;*/
+    font-size: 30px;
+    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+p{
+  margin-bottom: -5px;
+}
+
+.navbar{
+    display: flex;
+    position: relative;
+    justify-content: center;
+}
+
+.button-container{
+
+    display: flex;
+    justify-content: flex-end;
+    position: relative;
+    background-color:green;
+    padding: 5px;
+    border-color: black;
+}
+
+.login{
+    width: 80px;
+    height: 40px;
+    padding: 5px;
+    border-radius: 25px;
+
+    color: white;
+    /* background-color:red; */
+    margin-right: 5px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: 0.4s;
+}
+
+.login:hover{
+  background-color: transparent;
+  color: white;
+  transform: scale(1.3);
+}
+
+.banner{
+  padding: 80px;
+  background: url(images/hpfarmer3.png);
+  height: 120%;
+  background-size: cover;
+  background-position: center;
+  overflow: hidden;
+  /* margin: 10px; */
+}
+h2{
+  font-size: 2vw;
+}
+  
+.home {
+  position: relative;
+  width: 80%; /* Adjust width of the container */
+  height: 90%; /* Adjust height of the container */
+  /* Hide overflow content */
+  display: flex;
+  align-items: center;
+}
+.home .homeContent{
+  width: 60%;
+  float: left;
+}
+.home .homeContent h2{
+  display: flex;
+  font-weight: bolder;
+  margin-bottom: 2;
+  line-height: 1.5;
+  color: var(--black);
+  text-shadow: var(--box-shadow);
+}
+
+
+.home .homeContent p{
+  font-size: 1.2rem;
+  line-height: 2;
+  margin-bottom: 2rem;
+} 
+.home .homeContent .home-btn{
+  height: 1.5rem;
+  border-color: black;
+  color: black;
+
+}
+.home .homeContent .home-btn button {
+  font-size: 1.3rem;
+  background-color: var(--black);
+  color: var(--white);
+  border: 2px solid black; 
+  border-radius: 5px;
+  padding: 10px 20px; 
+  cursor: pointer;
+  transition: background-color 0.3s, border-color 0.3s; 
+}
+
+.home .homeContent .home-btn button:hover {
+  background-color: transparent;
+  color: var(--black);
+  border-color: transparent; 
+}
+
+section{
+  padding: 2rem 7%;
+}
+
+
+
+.footer {
+  background-color: #24262b;
+  padding: 70px;
+  color: #fff;
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-col {
+  color: #ffffff;
+  width: 50%;
+  /* box-sizing: border-box; */
+  padding: 0 15px;
+  margin-bottom: 30px;
+}
+
+.footer-col h4 {
+  font-size: 18px;
+  text-transform: capitalize;
+  margin-bottom: 20px;
+  position: relative; 
+}
+
+.footer-col h4::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -5px;
+  background-color: #e91e63;
+  height: 2px;
+  width: 100%; 
+}
+
+
+.footer-col ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer-col ul li {
+  margin-bottom: 10px;
+}
+
+.footer-col ul li a {
+  font-size: 16px;
+  text-transform: capitalize;
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: 300;
+  color: #bbbbbb;
+  display: block;
+  transition: all 0.3s ease;
+}
+
+.footer-col ul li a:hover {
+  color: #ffffff;
+  padding-left: 8px;
+}
+
+.footer-col .social-links {
+  display: flex;
+  justify-content: flex-start;
+  /* padding-left: 30px;
+  margin-top: 10px; */
+}
+
+.footer-col .social-links a {
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  background-color: rgba(255, 255, 255, 0.2);
+  margin: 0 10px 10px 0;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  color: #ffffff;
+  transition: all 0.5s ease;
+}
+
+.footer-col .social-links a:hover {
+  color: #24262b;
+  background-color: #ffffff;
+}
+
+@media (max-width: 768px) {
+  .home .homeContent {
+    width: 90%; 
+    margin: 0 auto; 
+    text-align: center; 
+  }
+
+  .home .homeContent h2 {
+    font-size: 2rem; 
+  }
+
+  .home .homeContent p {
+    font-size: 1rem; 
+  }
+
+  .home .homeContent .home-btn {
+    height: auto; 
+  }
+
+  .home .homeContent .home-btn button {
+    font-size: 1rem; 
+    padding: 10px 15px; 
+  }
+}
+
+
+
