--- a/src/App.css
+++ b/src/App.css
@@ -149,8 +149,10 @@ button:hover {
 
 }
 .img-one{
-  height: 100%;
-  width: 130px;
+  height: 8rem;
+  width: 8rem;
+  margin-top: 1rem;
+  /* width: 130px; */
   margin-right: 0;
   margin-left: 0;
 }
