--- a/src/App.css
+++ b/src/App.css
@@ -82,7 +82,13 @@
 .card-rest{
   padding: 0 30px 30px 30px;
 }
-
+.google{
+  text-align: end;
+  height: 25px;
+  flex-direction: column;
+  align-content: flex-end;
+  
+}
 .card-name{
   margin-top: 30px;
   margin-bottom: 30px;
