--- a/src/App.css
+++ b/src/App.css
@@ -472,8 +472,24 @@ transform: scale(1.3);
   display: block;
 }
 
-.hire-search{
-  margin-top: 0;
-  width: 80%;
+.hire-search {
+  width: 80%; 
+  margin-right: 20px;
+  margin-left: 40px;
 }
 
+
+
+.top-box{
+  margin-top: 2.3%;
+}
+
+.page-name{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2rem;
+  margin-bottom: 60px;
+}
+
+.search-container{
+width: 80%;
+}
